js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib2/test.3.kt
fun testFunction() = externalDemoFunction() + 1
